--- a/test/css/styles2.css
+++ b/test/css/styles2.css
@@ -3,5 +3,37 @@
 }
 h1 {
   color: green;
+  margin-top: 50px;
 }
  
+ul {
+  overflow: hidden;
+  background-color: #000000;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  width: 100%;
+}
+
+ul.topnav {
+  top: 0;
+}
+
+ul.bottom {
+  bottom: 0;
+}
+
+li{
+  float: left;
+} 
+
+li a{
+  display: block;
+  color: white;
+  padding: 14px 16px;
+  text-align: center;
+}
+
+li a:hover{
+  background-color: #777777;
+}
