--- a/swptest/src/app/footer/footer.component.html
+++ b/swptest/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed"
@@ -8,21 +8,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-       <a class="navbar-brand"> Pokedex </a>
     </div>
     <div class="collapse navbar-collapse"
           [ngClass]="{ 'in': isIn }">
-  <ul class="nav navbar-nav">
-      <li><a routerLink="/dashboard">Dashboard</a></li>
-      <li><a routerLink="/pokemons">Pokemon</a></li> 
-  </ul>
-  <ul class="nav navbar-nav navbar-right">
-    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-  </ul>
+  <ul class="nav nav-justified">
+      <li><a routerLink="/dashboard">Datas</a></li>
+      <li><a routerLink="/pokemons">Contact</a></li> 
+  </ul> 
     </div>
   </div> 
 </nav>
-
-
-
-
