--- a/swptest/src/app/header/header.component.html
+++ b/swptest/src/app/header/header.component.html
@@ -8,20 +8,22 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-       <a class="navbar-brand"> Pokedex </a>
+       <a class="navbar-brand" routerLink="/start"><img src="../favicon.ico"> </a>
     </div>
     <div class="collapse navbar-collapse"
           [ngClass]="{ 'in': isIn }">
-  <ul class="nav navbar-nav">
+<!--  <ul class="nav navbar-nav">
       <li><a routerLink="/dashboard">Dashboard</a></li>
       <li><a routerLink="/pokemons">Pokemon</a></li> 
-  </ul>
+  </ul> -->
   <ul class="nav navbar-nav navbar-right">
-    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    <li><a routerLink="/dashboard"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
   </ul>
     </div>
   </div> 
 </nav>
+<router-outlet></router-outlet>
+
 
 
 
