--- a/tutpoke/src/app/pokemon/pokemon.component.css
+++ b/tutpoke/src/app/pokemon/pokemon.component.css
@@ -15,7 +15,7 @@ width: 15em;
     background-color: #eee;
     margin: .5em;
     padding: .3em 0;
-    height: 1.6em;
+    height: 2em;
     border-radius: 4px
 }
 .pokemons li:hover {
@@ -41,7 +41,7 @@ width: 15em;
     position: relative;
     left: -1px;
     top: -4px;
-    height: 1.8em;
+    height: 2em;
     margin-right: .8em;
     border-radius: 4px 0 0 4px
 }
@@ -52,8 +52,17 @@ button {
     padding: 5px 10 px;
     border-radius: 4px;
     cursor: pointer;
-    cursor: hand
+    cursor: hand;
+    
+
 }
 button:hover {
     background-color: orange
+}
+button.delete {
+    float:right;
+    margin-top: 2px;
+    margin-right: .8em;
+    background-color: gray;
+    color: white;
 }
