--- a/swptest/src/app/dashboard/dashboard.component.html
+++ b/swptest/src/app/dashboard/dashboard.component.html
@@ -3,9 +3,9 @@
 <ul style="list-style: none">
 <li><button class="btn">E-mail-Template</button>
 <button class="btn">Admin-Überblick</button></li>
-<li><button class="btn">Admin-Überblick</button>
-<button class="btn">Admin-Überblick</button></li>
-<li><button class="btn">Admin-Überblick</button>
-<button class="btn">Admin-Überblick</button></li>
+<li><button class="btn">Blacklist-Überlick</button>
+<button class="btn">Termin-Vorlage</button></li>
+<li><button class="btn">Termin-Übersicht</button>
+<button class="btn">Einstellungen</button></li>
 </ul>
 </div>
