--- a/swptest/src/app/header/header.component.html
+++ b/swptest/src/app/header/header.component.html
@@ -17,7 +17,7 @@
       <li><a routerLink="/pokemons">Pokemon</a></li> 
   </ul> -->
   <ul class="nav navbar-nav navbar-right">
-    <li><a routerLink="/dashboard"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    <li><a routerLink="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
   </ul>
     </div>
   </div> 
