--- a/apitest/src/app/postdetail/postdetail.component.html
+++ b/apitest/src/app/postdetail/postdetail.component.html
@@ -6,6 +6,6 @@
 {{post.body}}
 </h4>
 <ul>
-  <li *ngFor="let comment of comments"> {{comment.id}}
+  <li *ngFor="let comment of comments"> {{comment.id}}  {{comment.name}}
   </li></ul>
 </div>
