--- a/apitest/src/app/edit/edit.component.html
+++ b/apitest/src/app/edit/edit.component.html
@@ -3,8 +3,14 @@
    Title  <input [(ngModel)]="post.title" placeholder="title"/>
 </label><br>
 <label> Body <textarea [(ngModel)]="post.body" placeholder="body"></textarea></label>
-<div>
-  <button type="button" (click)="save()"> Save
+<div >
+  <button type="button" (click)="save()" > Save
   </button>
+</div>
+<div class="alert alert-info ">
+  <strong>
+  <label>title:  </label>  {{post.title}}<br>
+  <label>body: </label>  {{post.body}}
+  </strong>
 </div>
 </div>
