--- a/apitest/src/app/postdetail/postdetail.component.html
+++ b/apitest/src/app/postdetail/postdetail.component.html
@@ -1,11 +1,32 @@
-<div *ngIf="post">
-<h1>
-  {{post.title}}
-</h1>
-<h4>
-{{post.body}}
-</h4>
-<ul>
-  <li *ngFor="let comment of comments"> {{comment.id}}  {{comment.name}}
-  </li></ul>
+<div class="container">
+  <div *ngIf="post" class="jumbotron">
+    <h2 class="display-9">
+    {{post.title}}
+    </h2>
+    <hr>
+    <h4>
+    {{post.body}}
+    </h4>
+  </div>
+  <ul *ngFor="let comment of comments" class="list-group">
+    <li class="list-group-item list-group-item-info" > {{comment.name}} </li>
+    <li class="list-group-item"> {{comment.email}} </li>
+    <li class="list-group-item"> {{comment.body}} </li>
+  </ul>
+  <h5> New Comment </h5>
+  <div class="form-group">
+    <p> name: </p>
+    <input #name class="form-control" placeholder="name"/>
+  </div>
+  <div class="form-group">
+    <p> email: </p>
+    <input #email class="form-control" placeholder="email"/>
+  </div>
+  <div class="form-group">
+    <p> comment: </p>
+    <input #body class="form-control" placeholder="comment"/>
+  </div>
+  <div>
+    <button type="button" (click)="save(name.value, email.value, body.value)" > Save </button>
+  </div>
 </div>
