--- a/apitest/src/app/postlist/postlist.component.html
+++ b/apitest/src/app/postlist/postlist.component.html
@@ -1,28 +1,27 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <h1>{{title}}</h1>
 <label> new Title: <input #newPostTitle /> </label>
 <button (click)="addPost(newPostTitle.value); newPostTitle.value=''">Add</button>
 <div class="container">
-  <table class="table table-responsive">
+  <table class="table table-responsive table-striped">
     <thead>
       <tr>
         <th> Posts</th>
         <th> Options </th>
       </tr>
     </thead>
-    <tbody *ngFor="let post of posts">
-      <tr>
+    <tbody>
+      <tr  *ngFor="let post of posts">
         <td>{{post.title}}</td>
         <td>
           <div class="btn-group">
-              <button type="button" (click)="gotoDetail(post)"> 
+              <button type="button" class="btn btn-primary" (click)="gotoDetail(post)"> 
                 <span class="glyphicon glyphicon-folder-open" ></span>
               </button>
-              <button type="button" (click)="delete(post); $event.stopPropagation()">
+              <button type="button" class="btn btn-primary" (click)="delete(post); $event.stopPropagation()">
                 <span class="glyphicon glyphicon-remove"></span>
               </button>
-              <button type="button" (click)="gotoEdit(post)">
+              <button type="button" class="btn btn-primary" (click)="gotoEdit(post)">
                 <span class="glyphicon glyphicon-pencil"></span>
               </button>
           </div>
@@ -30,5 +29,6 @@
       </tr>
     </tbody>
   </table>
+</div>
 </div>
 
