--- a/apitest/src/app/app.component.html
+++ b/apitest/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="container">
-  <div class="progress" *ngIf="loaded" >
-      <div class="indeterminate"></div>
-  </div>
+  
+  <ng2-slim-loading-bar [height]="'5px'"></ng2-slim-loading-bar>
 <router-outlet></router-outlet>
 
 </div>
