--- a/apitest/src/app/edit/edit.component.html
+++ b/apitest/src/app/edit/edit.component.html
@@ -13,7 +13,7 @@
     </div>
   </div>
   <div>
-    <button type="button" (click)="save()" > Save </button>
+    <button type="button" class="btn btn-info" (click)="save()" > Save </button>
   </div>
   <div *ngIf="edited" class="alert alert-info ">
     <strong>
