--- a/apitest/src/app/postdetail/postdetail.component.html
+++ b/apitest/src/app/postdetail/postdetail.component.html
@@ -15,6 +15,9 @@
     <li class="list-group-item"> {{comment.body}} </li>
   </ul>
   <h5> New Comment </h5>
+   <div *ngIf="empty" class="alert alert-danger">
+  <strong>You must insert a new Comment-name, Comment and your email!</strong>
+</div>
   <div class="form-group">
     <p> name: </p>
     <input #name class="form-control" placeholder="name"/>
@@ -28,6 +31,7 @@
     <input #body class="form-control" placeholder="comment"/>
   </div>
   <div>
-    <button type="button" (click)="save(name.value, email.value, body.value)" > Save </button>
+    <button type="button" class="btn btn-info" (click)="save(name.value, email.value, body.value)"> Save </button>
   </div>
+ 
 </div>
