--- a/apitest/src/app/app.component.html
+++ b/apitest/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   
   <ng2-slim-loading-bar [height]="'5px'"></ng2-slim-loading-bar>
+  <app-search></app-search>
 <router-outlet></router-outlet>
 
 </div>
