--- a/apitest/src/app/postlist/postlist.component.html
+++ b/apitest/src/app/postlist/postlist.component.html
@@ -2,9 +2,12 @@
   <h1>{{title}}</h1>
 <label> new Title: <input #newPostTitle /> </label>
 <button class="btn btn-info" (click)="addPost(newPostTitle.value); newPostTitle.value=''">Add</button>
+<br>
 <div *ngIf="empty" class="alert alert-danger">
   <strong>You must insert a new Post-Title!</strong>
 </div>
+
+<input #input [(ngModel)]="input.title" placeholder="Search by Title">
 <div class="container">
   <table class="table table-responsive table-striped">
     <thead>
@@ -14,7 +17,8 @@
       </tr>
     </thead>
     <tbody>
-      <tr  *ngFor="let post of posts">
+      <tr  *ngFor="let post of posts | filterBy: ['title']: input.title | paginate: {itemsPerPage: 10, currentPage:page, id: '1'}; let i = index
+      " >
         <td>{{post.title}}</td>
         <td>
           <div class="btn-group">
@@ -32,6 +36,7 @@
       </tr>
     </tbody>
   </table>
+  <pagination-controls (pageChange)="page = $event" id ="1"></pagination-controls>
 </div>
 </div>
 
