--- a/apitest/src/app/postlist/postlist.component.html
+++ b/apitest/src/app/postlist/postlist.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <h1>{{title}}</h1>
-<label> new Title: <input #newPostTitle /> </label>
+<label> new Title: <input #newPostTitle  /> </label>
 <button class="btn btn-info" (click)="addPost(newPostTitle.value); newPostTitle.value=''">Add</button>
 <br>
 <div *ngIf="empty" class="alert alert-danger">
   <strong>You must insert a new Post-Title!</strong>
 </div>
-
-<input #input [(ngModel)]="input.title" placeholder="Search by Title">
+<app-search></app-search>
+<input #input [(ngModel)]="input.title" placeholder="Search by Title" class="form-control">
 <div class="container">
   <table class="table table-responsive table-striped">
     <thead>
@@ -17,7 +17,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr  *ngFor="let post of posts | filterBy: ['title']: input.title | paginate: {itemsPerPage: 10, currentPage:page, id: '1'}; let i = index
+      <tr  *ngFor="let post of posts | filterBy: ['title']: input.title | paginate: {itemsPerPage: 9, currentPage:page, id: '1'}; let i = index
       " >
         <td>{{post.title}}</td>
         <td>
