--- a/apitest/src/app/postlist/postlist.component.html
+++ b/apitest/src/app/postlist/postlist.component.html
@@ -1,27 +1,26 @@
 <div class="container">
   <h1>{{title}}</h1>
-<label> new Title: <input #newPostTitle  /> </label>
-<button class="btn btn-info" (click)="addPost(newPostTitle.value); newPostTitle.value=''">Add</button>
-<br>
-<div *ngIf="empty" class="alert alert-danger">
-  <strong>You must insert a new Post-Title!</strong>
-</div>
-<app-search></app-search>
-<input #input [(ngModel)]="input.title" placeholder="Search by Title" class="form-control">
-<div class="container">
-  <table class="table table-responsive table-striped">
-    <thead>
-      <tr>
-        <th> Posts</th>
-        <th> Options </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr  *ngFor="let post of posts | filterBy: ['title']: input.title | paginate: {itemsPerPage: 9, currentPage:page, id: '1'}; let i = index
-      " >
-        <td>{{post.title}}</td>
-        <td>
-          <div class="btn-group">
+  <label> new Title: <input #newPostTitle  /> </label>
+  <button class="btn btn-info" (click)="addPost(newPostTitle.value); newPostTitle.value=''">Add</button>
+  <br>
+  <div *ngIf="empty" class="alert alert-danger">
+    <strong>You must insert a new Post-Title!</strong>
+  </div>
+  <app-search></app-search>
+  <input #input [(ngModel)]="input.title" placeholder="Search by Title" class="form-control">
+  <div class="container">
+    <table class="table table-responsive table-striped">
+      <thead>
+        <tr>
+          <th> Posts</th>
+          <th> Options </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr  *ngFor="let post of posts | filterBy: ['title']: input.title | paginate: {itemsPerPage: 9, currentPage:page, id: '1'}; let i = index" >
+          <td>{{post.title}}</td>
+          <td>
+            <div class="btn-group">
               <button type="button" class="btn btn-primary" (click)="gotoDetail(post)"> 
                 <span class="glyphicon glyphicon-folder-open" ></span>
               </button>
@@ -31,12 +30,12 @@
               <button type="button" class="btn btn-primary" (click)="gotoEdit(post)">
                 <span class="glyphicon glyphicon-pencil"></span>
               </button>
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <pagination-controls (pageChange)="page = $event" id ="1"></pagination-controls>
-</div>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <pagination-controls (pageChange)="page = $event" id ="1"></pagination-controls>
+  </div>
 </div>
 
