--- a/serverapi/forum/src/app/userdetail/userdetail.component.html
+++ b/serverapi/forum/src/app/userdetail/userdetail.component.html
@@ -3,4 +3,5 @@
 </p>
 <div class="container" *ngFor="let user of user">
   <li>{{user.name}}</li>
+  <button (click)="delete()"> Delete </button>
 </div>
