nächste Funktionen fertig

--- a/serverapi/forum/src/app/edituser/edituser.component.html
+++ b/serverapi/forum/src/app/edituser/edituser.component.html
@@ -5,6 +5,7 @@
   <label> UserName: <input #name [(ngModel)]="user.name" /></label>
   <label> Userpassword: <input #password [(ngModel)]="user.password" /></label>
   <label> Admin: <input #isAdmin class="checkbox" [(ngModel)]="user.isAdmin"/></label>
-   <button class="btn btn-info" (click)="editUser(name.value, password.value,isAdmin.value)">edit</button>
+  <input #id [(ngModel)]="user._id"/>
+   <button class="btn btn-info" (click)="editUser(name.value, password.value,isAdmin.value,id.value)">edit</button>
 </div>
  
