--- a/serverapi/forum/src/app/postadd/postadd.component.html
+++ b/serverapi/forum/src/app/postadd/postadd.component.html
@@ -1,7 +1,24 @@
 <p>
   postadd works!
 </p>
-<div class="container" *ngIf="post">
+<!--<div class="container" *ngIf="post">
   <label> Title: <input [(ngModel)]="post.title" class="form-control" placeholder="title"/></label>
  <label> Topics: <input #topics [(ngModel)]="post.topics"/></label>
-</div>
+</div>-->
+<form [formGroup]="postForm">
+    <div class="form-group">
+      <label class="center-block">Title:
+        <input class="form-control" [value]="post.title">
+      </label>
+    </div>
+    <div formGroupName="topics" class="well well-lg">
+      <h4>Secret Lair</h4>
+      <div class="form-group">
+        <label class="center-block">Description:
+          <input class="form-control" [value]="post.topics.description">
+        </label>
+      </div>
+    </div>
+</form>
+<p> Title value: {{postForm.value | json}}</p>
+
