--- a/serverapi/forum/src/app/postdetail/postdetail.component.html
+++ b/serverapi/forum/src/app/postdetail/postdetail.component.html
@@ -4,12 +4,15 @@
 <div class="container" *ngIf="post">
     <h2>{{post.title}}</h2>
     <p>{{post.Username}}</p>
-  <input [value]="post_id" #id/>
+  <input hidden [value]="post_id" #id/>
 
     <div class="container" *ngFor="let comment of comments">
     <li> {{comment.title}}<br>
      {{comment.content}}<br>
      {{comment.Username}}
+     <button type="button" class="btn btn-primary" (click)="deleteComment(comment); $event.stopPropagation()">
+                <span class="glyphicon glyphicon-remove"></span>
+              </button>
     </li>
     </div>
 <div >
