--- a/serverapi/forum/src/app/app.component.html
+++ b/serverapi/forum/src/app/app.component.html
@@ -1,4 +1,25 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-inverse ">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed"
+               (click)="toggleState()" >
+        <span class="sr-only"> Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+        </div>
+        <div class="collapse navbar-collapse" [ngClass]="{ 'in': isIn }">
+            <form class="navbar-form navbar-left">
+                <button type="button" class="btn btn-primary navbar-btn btn-sm" (click)="goBack()"> Back </button>
+            </form>
+            <ul class="nav navbar-nav" >
+           <li> <a  routerLink="/user">User</a></li>
+           <li> <a  routerLink="/posts">Posts</a></li>
+           <li> <a  routerLink="/topics">Topics</a></li>
+           <li> <a  routerLink="/login">Login</a> </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <router-outlet></router-outlet>
