--- a/serverapi/forum/src/app/posts/posts.component.html
+++ b/serverapi/forum/src/app/posts/posts.component.html
@@ -1,15 +1,32 @@
-<p>
-  posts works!
-</p>
-<div class="container">
-  <li *ngFor="let post of posts" (click)="onSelect(post)"
-  [class.selected]="post === selectedPost">
-    {{post.title}}
-    {{post.Username}}
-    <button type="button" class="btn btn-primary" (click)="deletePost(post); $event.stopPropagation()">
+ <table class="table table-responsive table-striped">
+      <thead>
+        <tr>
+          <th> Posts</th>
+          <th> Username</th>
+          <th> Options </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr  *ngFor="let post of posts " >
+          <td>{{post.title}}</td>
+          <td>{{post.Username}}</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-primary" (click)="gotoDetail(post)"> 
+                <span class="glyphicon glyphicon-folder-open" ></span>
+              </button>
+              <button type="button" class="btn btn-primary" (click)="deletePost(post); $event.stopPropagation()">
                 <span class="glyphicon glyphicon-remove"></span>
               </button>
-  </li>
+              <button type="button" class="btn btn-primary" (click)="gotoEdit(post)">
+                <span class="glyphicon glyphicon-pencil"></span>
+              </button>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+<div>
   <label> new Title: <input #title  /> </label>
   <label> new topics: <input #topics  /> </label>
   
