--- a/serverapi/forum/src/app/userdetail/userdetail.component.html
+++ b/serverapi/forum/src/app/userdetail/userdetail.component.html
@@ -1,10 +1,13 @@
-<p>
-  userdetail works!
-</p>
-<div class="container" *ngFor="let user of user">
-  <li>{{user.name}}</li>
-  <button (click)="delete()"> Delete </button>
-  <button type="button" class="btn btn-primary" (click)="deleteUser(user); $event.stopPropagation()">
-                <span class="glyphicon glyphicon-remove"></span>
-              </button>
-</div>
+<h2>Userinfo</h2>
+<table class="table table-responsive table-striped">
+  <tbody *ngFor="let user of user">
+    <tr>
+      <td> Username:</td>
+      <td> {{user.name}}</td>
+    </tr>
+    <tr>
+      <td> Is Admin: </td>
+      <td> {{user.isAdmin}}</td>
+    </tr>
+  </tbody>
+</table>
