--- a/serverapi/forum/src/app/app.component.html
+++ b/serverapi/forum/src/app/app.component.html
@@ -19,6 +19,9 @@
            <li> <a  routerLink="/topics">Topics</a></li>
            <li> <a  routerLink="/login">Login</a> </li>
             </ul>
+            <form class="navbar-form navbar-right">
+                <button type="button" class="btn btn-primary navbar-btn btn-sm" (click)="logout()">Logout</button>
+            </form>
         </div>
     </div>
 </nav>
