--- a/serverapi/forum/src/app/topicdetail/topicdetail.component.html
+++ b/serverapi/forum/src/app/topicdetail/topicdetail.component.html
@@ -7,18 +7,15 @@
         </tr>
       </thead>
       <tbody>
-        <tr  *ngFor="let post of posts " >
+        <tr  *ngFor="let post of posts " [class.selected]="isSelected(post)" (click)="onSelect(post)" >
           <td>{{post.title}}</td>
           <td>{{post.Username}}</td>
           <td>
             <div class="btn-group">
-              <button type="button" class="btn btn-primary" (click)="gotoDetail(post)"> 
-                <span class="glyphicon glyphicon-folder-open" ></span>
-              </button>
-              <button type="button" class="btn btn-primary" (click)="deletePost(post); $event.stopPropagation()">
+              <button *ngIf="decoded.isAdmin === true" type="button" class="btn btn-primary" (click)="deletePost(post); $event.stopPropagation()">
                 <span class="glyphicon glyphicon-remove"></span>
               </button>
-              <button type="button" class="btn btn-primary" (click)="gotoEdit(post)">
+              <button  *ngIf=" decoded.username === post.Username" type="button" class="btn btn-primary" (click)="gotoEdit(post)">
                 <span class="glyphicon glyphicon-pencil"></span>
               </button>
             </div>
