--- a/serverapi/forum/src/app/userdetail/userdetail.component.html
+++ b/serverapi/forum/src/app/userdetail/userdetail.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <h2>Userinfo</h2>
 <table class="table table-responsive table-striped">
   <tbody *ngFor="let user of user">
@@ -11,3 +12,4 @@
     </tr>
   </tbody>
 </table>
+</div>
